--- a/client/package.json
+++ b/client/package.json
@@ -9,15 +9,12 @@
     "@testing-library/react": "^9.4.0",
     "@testing-library/user-event": "^7.2.1",
     "axios": "^0.19.2",
-    "bootstrap": "^4.4.1",
     "jwt-decode": "^2.2.0",
     "moment": "^2.24.0",
     "nodemailer": "^6.4.6",
     "react": "^16.12.0",
     "react-beautiful-dnd": "^13.0.0",
     "react-bootstrap": "^1.0.0-beta.17",
-    "react-compound-timer": "^1.2.0",
-    "react-countdown": "^2.2.1",
     "react-dom": "^16.12.0",
     "react-full-screen": "^0.2.4",
     "react-fullscreen-element": "^1.0.2",
@@ -25,7 +22,7 @@
     "react-moment": "^0.9.7",
     "react-request-fullscreen": "^1.1.2",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "3.3.1",
+    "react-scripts": "^3.4.0",
     "react-switch": "^5.0.1",
     "reactstrap": "^8.4.1",
     "socket.io-client": "^2.3.0",
